--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.tugalsan</groupId>
-    <artifactId>com.tugalsan.blg.doc</artifactId>
+    <artifactId>com.tugalsan.blg.file.tmcr</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>com.tugalsan.api.log</artifactId>
+            <artifactId>com.tugalsan.api.file.tmcr</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
