--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <exec.mainClass>com.tugalsan.blg.doc.Main</exec.mainClass>
+        <exec.mainClass>com.tugalsan.blg.file.tmcr.Main</exec.mainClass>
     </properties>
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.4.2</version>
+                <version>3.6.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
