--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
             <artifactId>com.tugalsan.lib.file.tmcr</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>com.tugalsan.api.sql.conn</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
